<resources>
    <string name="app_name">BrenoSocialMedia</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_loggin">Enter your username</string>
    <string name="imagem_logo_login">Imagem logo</string>
    <string name="username_login">Username</string>
    <string name="keep_logged">Keep me logged in</string>
    <string name="log_in_button">LOG IN</string>
    <string name="titulo_posts">Titulo</string>
    <string name="text_posts">Texto comprido e complexo sobre o post</string>
    <string name="tente_novamente">Tente Novamente</string>
    <string name="nome">Nome</string>
    <string name="breninhoooooooooo">Breninhoooooooooo</string>
</resources>
